<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="379dp"
        android:layout_height="57dp"
        android:text="@string/display_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:columnCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rowCount="6">

        <Button
            android:id="@+id/mr"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_mr"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/ms"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_ms"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/m1"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_m_plus"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/m2"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_m_minus"
            app:layout_column="4"
            app:layout_row="0" />

        <Button
            android:id="@+id/mc"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_mc"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/backspace"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_backspace"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/seven"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_seven"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/dot"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_dot"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/equals"
            android:layout_width="78dp"
            android:layout_height="0dp"
            android:text="@string/button_equals"
            app:layout_column="4"
            app:layout_row="4"
            app:layout_gravity="fill_vertical"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/plus"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_plus"
            app:layout_column="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/minus"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_minus"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/three"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_three"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/two"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_two"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/button_zero"
            app:layout_column="0"
            app:layout_row="5"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"/>

        <Button
            android:id="@+id/one"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_one"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/four"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_four"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/five"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_five"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/ordinalNumber"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_ordinal"
            app:layout_column="4"
            app:layout_row="3" />

        <Button
            android:id="@+id/six"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_six"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_multiplication"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/eight"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_eight"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/nine"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_nine"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/division"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_division"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/procent"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_percent"
            app:layout_column="4"
            app:layout_row="2" />

        <Button
            android:id="@+id/ce"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_ce"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/c"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_c"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/plusminus"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_plus_minus"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/evolution"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:text="@string/button_sqrt"
            app:layout_column="4"
            app:layout_row="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
